Fixed and issue with the contact section where it would be too high

--- a/styles.css
+++ b/styles.css
@@ -906,6 +906,9 @@ body{
     .projects-links{
         font-size: 1em;
     }
+    .contact{
+        margin-bottom: 10vh;
+    }
 }
 /* iPhone XR/XS Max */
 @media only screen and (max-width:414px) {
